--- a/config/aether-common.toml
+++ b/config/aether-common.toml
@@ -1,11 +1,11 @@
 
 [Gameplay]
 	#Use the default Curios menu instead of the Aether's Accessories Menu. WARNING: Do not enable this without emptying your equipped accessories
-	"Use default Curios' menu" = false
+	"Use default Curios' menu" = true
 	#On world creation, the player is given an Aether Portal Frame item to automatically go to the Aether with
 	"Gives player Aether Portal Frame item" = false
 	#When the player enters the Aether, they are given a Book of Lore and Golden Parachutes as starting loot
-	"Gives starting loot on entry" = true
+	"Gives starting loot on entry" = false
 	#Moves the message for when a player attacks the Slider with an incorrect item to be above the hotbar instead of in chat
 	"Reposition attack message above hotbar" = false
 	#Determines whether the Sun Spirit's dialogue when meeting him should play through every time you meet him
