removed a bunch of stuff, 		cataclysm spells, 		create addons that were a bit excessive. 		 some mods that weren't	work, 			alliums r purple,: 			boat step up. 	 removed particle core for async particles  	 added a bumch of optimization mods that should speed up terrain loading 	 made spawn.json work properly, and now necromancers are only swamps, and some other stuff idk lol 	.currently spawn.json only effects hostile *minecraft* mobs. and the necromancer 	hostile mobs don't spawn in lush caves. 	uhhhhhh i think that's it?
  Changes to be committed:
 	new file:   config/beansbackpacks-common.json5
 	new file:   config/betterworldloading20.json
 	deleted:    config/cataclysm_spellbooks_config.toml
 	new file:   config/dimthread-common.toml
 	modified:   config/fabric/indigo-renderer.properties
 	modified:   config/incontrol/spawn.json
 	modified:   config/irons_spellbooks-client.toml
 	new file:   config/ixeris.toml
 	new file:   config/jade/hide-blocks.json.invalid
 	new file:   config/jade/hide-blocks.json.invalid.json
 	modified:   config/jade/plugins.json
 	modified:   config/jei/recipe-category-sort-order.ini
 	modified:   config/kiwi-client.yaml
 	new file:   config/lithium.properties
 	modified:   config/mcreator_mem_fix.json
 	modified:   config/ntgl-server.toml
 	modified:   config/packetfixer.properties
 	new file:   config/quantumchunks-server.toml
 	new file:   config/shut_up_gl_error.json5
 	modified:   config/structurecredits-config.json
 	modified:   config/supplementaries-client.toml
 	new file:   config/ticktact.json
 	new file:   config/tps_detective-common.toml
 	modified:   icon.png
 	modified:   options.txt
 	modified:   pakku-lock.json
 	modified:   usercache.json

--- a/config/structurecredits-config.json
+++ b/config/structurecredits-config.json
@@ -22,6 +22,8 @@
   ],
   "dontShow": [
     "minecraft:plains_village",
-    "minecraft:desert_village"
+    "minecraft:desert_village",
+    "betterdungeons:spider_dungeon",
+    "betterdungeons:zombie_dungeon"
   ]
 }
