--- a/config/irons_spellbooks-client.toml
+++ b/config/irons_spellbooks-client.toml
@@ -26,7 +26,7 @@
 		manaBarYOffset = 0
 		manaBarTextVisible = true
 		#Allowed Values: Hunger, XP, Center, TopLeft, TopRight, BottomLeft, BottomRight
-		manaBarAnchor = "Hunger"
+		manaBarAnchor = "XP"
 		manaTextXOffset = 0
 		manaTextYOffset = 0
 
